DD/AT - updated the other issues section

--- a/W16_lab05.md
+++ b/W16_lab05.md
@@ -36,6 +36,10 @@ This is not enough work to do to receive 1000 points.
 (h) Other Issues
 
 There are no other issues, only more features that could be added
+The features that we would like to add are:
+
+A search bar that the user can type in to search for potential classes.
+Including the engineering courses in the program. 
 
 (i) Code Assessment
 
